--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -15,14 +15,14 @@ categories = [
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-cortex-m = { version = "0.6.0", optional = true }
+critical-section = { version = "1.1", optional = true }
 
 [dependencies.defmt]
 version = "0.3.0"
 optional = true
 
 [features]
-thumbv6 = ["cortex-m"]
+thumbv6 = ["critical-section"]
 defmt_0_3 = ["defmt"]
 
 [package.metadata.docs.rs]
